# indicatif-read-dir-stream

./: Cargo.toml
src/: main.rs
